change header layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,10 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
               <a href="{{ site.baseurl }}/about">About</a>
+              <a href="{{ site.baseurl }}/cv-resume">CV/Resume</a>
+              <a href="{{ site.baseurl }}/research">Research</a>
+              <a href="{{ site.baseurl }}/personal">Personal</a>
             </nav>
           </header>
         </div>
